decreased h2 font-size on mobile to prevent text spilling out of containers

--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -11,6 +11,9 @@ main.home-page {
     line-height: 7rem;
     text-transform: uppercase;
     text-align: center;
+    @include maxScreen($mobile) {
+        font-size: 6rem;
+    }
     span {
       display: block;
     }
